--- a/_config.yml
+++ b/_config.yml
@@ -17,5 +17,7 @@ url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
+theme: hacker
+
 # Build settings
 markdown: kramdown
