--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "来自火星的老司机们"
 author: "nice-opentech"
 description: "来自火星互联网开发者技术博客"
 keywords: ""
-biography: "WE ARE OLD DRIVERS, WE ARE FROM MARS!"
+biography: "WE ARE OLD DRIVERS, WE ARE FROM MARS!<br />Owner: 九亿少女の懜"
 colophon: "© <a href='http://www.oneniceapp.com/about'>nice-opentech</a><br>Content available under <a href='http://creativecommons.org/licenses/by-nc-sa/4.0/'>Creative Commons (BY-NC-SA)</a> unless otherwise noted.<br>This site is hosted at <a href='https://pages.github.com/'>Github Pages</a> and created with <a href='http://jekyllrb.com/'>Jekyll</a>."
 
 baseurl: ""
